--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,29 @@
-# dependencies
-node_modules
-.pnp
+# Node.js
+node_modules/
+.pnp/
 .pnp.js
 
-# testing
-/coverage
+# Python
+venv/
+__pycache__/
+db.sqlite
 
-# production
-/build
+# Testing
+coverage/
 
-# misc
+# Production
+build/
+
+# Misc
 .DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
-venv/
-db.sqlite
-__pycache__/
+# Env files in root and any subdirectory
+.env
+.env.*
+**/.env
+**/.env.*
